testdata/test/resources/com/yafred/asn1/test/should-fail/enumerated_duplicate_id.asn
-- FAIL duplicate id

Module DEFINITIONS ::= BEGIN

Enumeration1 ::= ENUMERATED {
a, 
b, 
c,  
...,
a 
}


END